Bug 1054010: Skip final reflow for flex items that receive an earlier 'measuring reflow' with the right size. r=mats